@@ -2,6 +2,8 @@ PostGIS 3.1.11dev
 xxxx/xx/xx
 
 * Bug Fixes *
+ - #5610, Regression fix: Allow Nan and infinity again
+          in ST_SetPoint (Regina Obe)
 
 PostGIS 3.1.10
 2023/11/19
